# calibre-onchain

./: .env.example  .gitignore  README.md
.claude/skills/pr-review/: PR_REVIEW.md  SKILL.md
.github/workflows/: contracts.yml  node.yml
agent/: README.md  pyproject.toml
agent/scripts/: verify_deployed_digest.py
agent/src/calibre_agent/: __init__.py  __main__.py  config.py  contract.py  loop.py  maker.py  policy_webhook.py  price.py  signer.py  voucher.py
agent/tests/: test_config_and_price.py  test_loop.py  test_maker.py  test_policy_webhook.py  test_signer.py  test_verify_digest.py  test_voucher.py
contracts/: deploy-testnet.sh  foundry.toml  live-proof.sh
contracts/script/: Deploy.s.sol  DeployHook.s.sol  EndToEnd.s.sol
contracts/src/: CalibreMarket.sol  DepositAndMintHook.sol  IERC20.sol
contracts/test/: CalibreMarket.t.sol  CalibreSell.t.sol  CalibreVoucher.t.sol  DepositAndMintHook.t.sol
contracts/test/mocks/: MockFalseTransferUSDC.sol  MockHookRelay.sol  MockUSDC.sol
discord-bot/: package-lock.json  package.json
discord-bot/deploy/: calibre-discord-bot.service
discord-bot/src/: bot.ts  clans.ts  config.ts  identity.ts  index.ts  matches.ts  rank.ts  roles.ts  sides.ts
discord-bot/test/: clans.test.ts  config.test.ts  identity.test.ts  matches.test.ts  rank.test.ts  roles.test.ts  sides.test.ts
docs/: ARCHITECTURE.md  DEMO-SCRIPT.md  DEPLOY-RUNBOOK.md  SUBMISSIONS.md
docs/plans/: 465-buy-cost-lower-bound.md  468-sdk-tests.md  550-clan-nested-rank.md  553-parity-harness.md  581-bot-side-roles.md  582-bot-identity-ingest.md  583-clan-gateway.md  595-bare-clan-records.md  596-gateway-profile-records.md  597-gateway-richer-records.md  613-cctp-mint-hook.md  618-mpc-server-wallet.md  619-mpc-policies-webhook.md  W0-scaffold.md  W1.1-settlement-core.md  W1.2-voucher.md  W1.3-e2e-proof.md  W6-schema-check.md  W6.2-ens-resolver.md  W6.3-subnames.md  W6.4-discord-rank.md  W7.2-agent.md  W7.2-voucher-swap.md  W9-submission-docs.md
docs/plans/ethglobal/: 580-discord-match-channels.md
gateway/: README.md  deploy.sh  package-lock.json  package.json  smoke-records.mjs
gateway/contract/: OffchainResolverStub.sol
gateway/src/: config.ts  index.ts  profile.ts  resolver.ts  signing.ts
gateway/test/: index.test.ts  keys-schema.test.ts  profile.test.ts  resolver.test.ts  signing.test.ts
parity/: README.md  package-lock.json  package.json  tsconfig.json
parity/test/: accept-vs-resolve.test.ts
ranking/: README.md  keys.json  pyproject.toml
ranking/scripts/: emit_keys_json.py
ranking/src/calibre_ranking/: __init__.py  keys.py  ladder.py  tiers.py
ranking/tests/: test_keys.py  test_keys_fixture.py  test_ladder.py  test_tiers.py
sdk/: README.md  pyproject.toml
sdk/src/calibre_onchain/: __init__.py  client.py
sdk/tests/: test_client.py
