[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calibre-agent"
version = "0.0.0"
description = "Standalone on-chain market-maker agent: a Dynamic server wallet quoting on the Arc CalibreMarket contract, using the calibre public price feed as its prior. Newly created during the hackathon; not a mirror of the private bot fleet. W0 scaffold; implementation lands in W7.2."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Hansel" }]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/calibre_agent"]
