[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calibre-agent"
version = "0.1.0"
description = "Standalone on-chain market-maker agent: a Dynamic server wallet quoting on the Arc CalibreMarket contract, using the calibre public price feed as its prior. Newly created during the hackathon; not a mirror of the private bot fleet."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Hansel" }]
dependencies = [
    "httpx>=0.27",
    "web3>=6.15",
    "eth-account>=0.11",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
calibre-agent = "calibre_agent.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/calibre_agent"]
