[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calibre-onchain"
version = "0.0.0"
description = "calibre-onchain SDK — the contract client (create/resolve) + tx-signing helpers the private calibre app imports. W0 scaffold; implementation lands in W1.x."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Hansel" }]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/calibre_onchain"]
